--- a/documentation-ui/pom.xml
+++ b/documentation-ui/pom.xml
@@ -53,5 +53,28 @@
         <version>${commons.version}</version>
       </extension>
     </extensions>
+    <plugins>
+      <plugin>
+        <groupId>org.xwiki.commons</groupId>
+        <artifactId>xwiki-commons-tool-xar-plugin</artifactId>
+        <configuration>
+          <entries>
+            <entry>
+              <document>Documentation.Data.NavigationForUsers</document>
+              <type>demo</type>
+            </entry>
+            <entry>
+              <document>Documentation.Data.NavigationForAdministrators</document>
+              <type>demo</type>
+            </entry>
+            <entry>
+              <document>Documentation.Data.NavigationForDevelopers</document>
+              <type>demo</type>
+            </entry>
+          </entries>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
+
 </project>
