XDOC-1: Create a documentation application * Make the home page of "demo" type so that if a Documentation space exists, it won't cause a conflict

--- a/documentation-ui/pom.xml
+++ b/documentation-ui/pom.xml
@@ -71,6 +71,10 @@
               <document>Documentation.Data.NavigationForDevelopers</document>
               <type>demo</type>
             </entry>
+            <entry>
+              <document>Documentation.WebHome</document>
+              <type>demo</type>
+            </entry>
           </entries>
         </configuration>
       </plugin>
