XDOC-1: Create a documentation application * Change the app space to DocApp to avoid namespace clashing with existing Documentation spaces * Exclude pages from the DocApp from being validated (to exclude template pages) * Display the docextra tab only for pages outside of the DocApp space * Default to target = User in the Doc Class to avoid empty values

--- a/documentation-ui/pom.xml
+++ b/documentation-ui/pom.xml
@@ -60,19 +60,15 @@
         <configuration>
           <entries>
             <entry>
-              <document>Documentation.Data.NavigationForUsers</document>
+              <document>DocApp.Data.NavigationForUsers</document>
               <type>demo</type>
             </entry>
             <entry>
-              <document>Documentation.Data.NavigationForAdministrators</document>
+              <document>DocApp.Data.NavigationForAdministrators</document>
               <type>demo</type>
             </entry>
             <entry>
-              <document>Documentation.Data.NavigationForDevelopers</document>
-              <type>demo</type>
-            </entry>
-            <entry>
-              <document>Documentation.WebHome</document>
+              <document>DocApp.Data.NavigationForDevelopers</document>
               <type>demo</type>
             </entry>
           </entries>
