--- a/documentation-xwikiorg/pom.xml
+++ b/documentation-xwikiorg/pom.xml
@@ -32,6 +32,7 @@
   <packaging>jar</packaging>
   <description>Checks for violations in documentation pages using XWiki.org rules</description>
   <properties>
+    <xwiki.jacoco.instructionRatio>0.14</xwiki.jacoco.instructionRatio>
     <!-- Name to display by the Extension Manager -->
     <xwiki.extension.name>XWiki.org Checks for Documentation Application</xwiki.extension.name>
     <!-- The extension's category -->
@@ -47,6 +48,18 @@
       <groupId>org.xwiki.contrib.documentation</groupId>
       <artifactId>documentation-checker</artifactId>
       <version>${project.version}</version>
+    </dependency>
+    <!-- Test Dependencies -->
+    <dependency>
+      <groupId>org.xwiki.commons</groupId>
+      <artifactId>xwiki-commons-tool-test-component</artifactId>
+      <version>${commons.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
