--- a/documentation-xwikiorg/pom.xml
+++ b/documentation-xwikiorg/pom.xml
@@ -46,7 +46,7 @@
     </dependency>
     <dependency>
       <groupId>org.xwiki.contrib.documentation</groupId>
-      <artifactId>documentation-checker</artifactId>
+      <artifactId>documentation-api</artifactId>
       <version>${project.version}</version>
     </dependency>
     <!-- Test Dependencies -->
