--- a/documentation-api/pom.xml
+++ b/documentation-api/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <groupId>org.xwiki.contrib.documentation</groupId>
     <artifactId>documentation</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
   </parent>
   <artifactId>documentation-api</artifactId>
   <name>Documentation Application - API</name>
