--- a/documentation-xwikiorg/pom.xml
+++ b/documentation-xwikiorg/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <groupId>org.xwiki.contrib.documentation</groupId>
     <artifactId>documentation</artifactId>
-    <version>1.2-SNAPSHOT</version>
+    <version>1.2</version>
   </parent>
   <artifactId>documentation-xwikiorg</artifactId>
   <name>Documentation Application - Checks for XWiki.org</name>
