XDOC-19: Allow doc page templates to be customized * Typo fix

--- a/documentation-ui/pom.xml
+++ b/documentation-ui/pom.xml
@@ -60,7 +60,7 @@
         <configuration>
           <entries>
             <entry>
-              <document>DocApp.Data.ExplanationDocumentationTemplate.xml</document>
+              <document>DocApp.Data.ExplanationDocumentationTemplate</document>
               <type>demo</type>
             </entry>
             <entry>
