--- a/documentation-xwikiorg/pom.xml
+++ b/documentation-xwikiorg/pom.xml
@@ -28,38 +28,12 @@
     <version>1.5-SNAPSHOT</version>
   </parent>
   <artifactId>documentation-xwikiorg</artifactId>
-  <name>Documentation Application - Checks for XWiki.org</name>
-  <packaging>jar</packaging>
-  <description>Checks for violations in documentation pages using XWiki.org rules</description>
-  <properties>
-    <xwiki.jacoco.instructionRatio>0.11</xwiki.jacoco.instructionRatio>
-    <!-- Name to display by the Extension Manager -->
-    <xwiki.extension.name>XWiki.org Checks for Documentation Application</xwiki.extension.name>
-    <!-- The extension's category -->
-    <xwiki.extension.category>api</xwiki.extension.category>
-  </properties>
-  <dependencies>
-    <dependency>
-      <groupId>org.xwiki.rendering</groupId>
-      <artifactId>xwiki-rendering-api</artifactId>
-      <version>${rendering.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.xwiki.contrib.documentation</groupId>
-      <artifactId>documentation-api</artifactId>
-      <version>${project.version}</version>
-    </dependency>
-    <!-- Test Dependencies -->
-    <dependency>
-      <groupId>org.xwiki.commons</groupId>
-      <artifactId>xwiki-commons-tool-test-component</artifactId>
-      <version>${commons.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+  <name>Documentation Application - XWiki.org - Parent POM</name>
+  <packaging>pom</packaging>
+  <description>Features specific to XWiki.org</description>
+  <modules>
+    <!-- Listed alphabetically -->
+    <module>documentation-xwikiorg-api</module>
+    <module>documentation-xwikiorg-ui</module>
+  </modules>
 </project>
