--- a/documentation-ui/pom.xml
+++ b/documentation-ui/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <groupId>org.xwiki.contrib.documentation</groupId>
     <artifactId>documentation</artifactId>
-    <version>1.10-SNAPSHOT</version>
+    <version>1.10</version>
   </parent>
   <artifactId>documentation-ui</artifactId>
   <name>Documentation Application - UI</name>
