--- a/documentation-xwikiorg/documentation-xwikiorg-api/pom.xml
+++ b/documentation-xwikiorg/documentation-xwikiorg-api/pom.xml
@@ -25,7 +25,7 @@
   <parent>
     <groupId>org.xwiki.contrib.documentation</groupId>
     <artifactId>documentation-xwikiorg</artifactId>
-    <version>1.10</version>
+    <version>1.11-SNAPSHOT</version>
   </parent>
   <artifactId>documentation-xwikiorg-api</artifactId>
   <name>Documentation Application - XWiki.org - Checks</name>
